manifests/postgres-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: taskapp
spec:
  serviceName: postgres
  replicas: 1

  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres

    spec:
      containers:
        - name: postgres
          image: postgres:16.4

          ports:
            - containerPort: 5432

          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data

          readinessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - taskapp_admin
            initialDelaySeconds: 10
            periodSeconds: 5

          livenessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - taskapp_admin
            initialDelaySeconds: 30
            periodSeconds: 10

          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"

  volumeClaimTemplates:
    - metadata:
        name: postgres-storage

      spec:
        accessModes:
          - ReadWriteOnce

        resources:
          requests:
            storage: 5Gi
